# arkiv

backend/: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
backend/app/: config.py  deps.py  main.py  prompt.py
backend/app/prompts/: SYSTEM.md  USER.md
backend/app/rag/: chunker.py  cleaner.py  embedder.py  loader.py  pipeline.py  vectorstore.py
backend/app/routes/: ask.py  auth.py  chats.py  clear.py  delete.py  upload.py
frontend/: README.md  components.json  package.json  pnpm-lock.yaml
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
frontend/app/chat/[[...id]]/: page.tsx
frontend/app/chat/_components/: app-sidebar.tsx  chat-view.tsx  files-view.tsx  right-panel.tsx
frontend/app/og/: page.tsx
frontend/components/: figlet.tsx  markdown.tsx
frontend/components/ui/: alert-dialog.tsx  animated-theme-toggler.tsx  badge.tsx  button.tsx  card.tsx  click-spark.tsx  morphing-text.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  textarea.tsx  tooltip.tsx
frontend/hooks/: use-mobile.ts
