[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arkiv-backend"
version = "2.0.0"
description = "RAG Application"
authors = [
    {name = "Saptarshi Roy"},
    {name = "Krishnendu Das"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "jq>=1.11.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-pinecone>=0.2.13",
    "langchain-pymupdf4llm>=1.28.0",
    "langchain-text-splitters>=1.1.2",
    "markdown>=3.10.2",
    "openai>=2.44.0",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "unstructured[csv,docx,pptx,xlsx]>=0.23.1",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.setuptools]
packages = ["app"]
